tests/testfiles/passing/invalid_identifiers/keyword_as_id_enum.c
/* Keyword as identifier: enum */
int main() {
    int enum;
}